// Copyright (c) Localize Technologies, Inc. All rights reserved.

// Analytics v2 Service - Minimal envelope + CBOR payload
// Designed for minimal payload size in challenging network environments

syntax = "proto3";

package analytics.v1;

// Analytics service - client reports events to server
service AnalyticsService {
  // Fire-and-forget batch upload (primary method)
  rpc Ingest(Batch) returns (Ack);
  
  // Optional: long-lived stream for real-time
  rpc Stream(stream Event) returns (stream Ack);
}

// ============================================================================
// Event Envelope
// ============================================================================

// Event = Tiny envelope + payload bytes
message Event {
  bytes event_id = 1;           // 16-byte UUID (binary)
  fixed64 timestamp_ms = 2;     // 8 bytes fixed
  EventType type = 3;           // Enum = 1 byte varint
  fixed32 schema_version = 4;   // 0x00MMmmPP = major.minor.patch
  bytes payload = 5;            // CBOR/MsgPack/JSON encoded data
  NetworkContext network = 6;   // Optional: network at event time
}

// Event types for routing
enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  ERROR = 1;         // Urgent - upload on FAIR+ connections
  IMPRESSION = 2;    // Normal - upload on GOOD+ connections
  HEARTBEAT = 3;     // Background - EXCELLENT only
  PERFORMANCE = 4;   // Background - EXCELLENT only
  LIFECYCLE = 5;     // Normal - upload on GOOD+ connections
}

// ============================================================================
// Batching
// ============================================================================

message Batch {
  bytes batch_id = 1;               // 16-byte UUID
  repeated Event events = 2;        // Multiple events
  fixed32 device_fingerprint = 3;   // 4-byte hash vs string
  QueueStatus queue = 4;            // Backpressure signal
  fixed64 sent_at_ms = 5;           // Batch creation time
}

// Status of the client's local event queue
message QueueStatus {
  // Number of events waiting to be sent
  int32 pending_events = 1;
  
  // Age of oldest pending event (hours)
  int32 oldest_event_age_hours = 2;
  
  // True if queue is growing faster than draining
  bool is_backpressure = 3;
}

// ============================================================================
// Network Context
// ============================================================================

message NetworkContext {
  ConnectionQuality quality = 1;
  double download_mbps = 2;
  double upload_mbps = 3;
  string connection_type = 4;      // wifi, ethernet, cellular, unknown
  int32 signal_strength_dbm = 5;   // For wifi/cellular
}

// Connection quality levels
enum ConnectionQuality {
  CONNECTION_QUALITY_UNSPECIFIED = 0;
  OFFLINE = 1;       // No upload
  POOR = 2;          // < 1 Mbps, errors only
  FAIR = 3;          // 1-5 Mbps, urgent only
  GOOD = 4;          // 5-20 Mbps, normal uploads
  EXCELLENT = 5;     // > 20 Mbps, all events
}

// ============================================================================
// Server Response
// ============================================================================

message Ack {
  bytes batch_id = 1;
  bool accepted = 2;
  repeated bytes rejected_event_ids = 3;  // 16-byte UUIDs
  uint32 throttle_ms = 4;     // Server backpressure
  Policy policy = 5;          // Updated policy (optional)
}

message Policy {
  ConnectionQuality min_quality = 1;   // Minimum quality for uploads
  int32 max_batch_size = 2;            // Max events per batch
  int32 max_queue_age_hours = 3;       // Force upload if older
  int32 upload_interval_seconds = 4;   // Suggested upload interval
}
